--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
    <meta
       content="Bruce633 adalah tempat yang tepat. Sebagai agen slot online terkemuka, dikenal karena koleksi permainannya yang selalu gacor parah, memberikan peluang luar biasa bagi para pemain untuk meraih kemenangan besar."
       property="og:description" />
-   <meta property="og:url" content="https://amphaotogel.vercel.app/" />
-   <meta property="og:site_name" content="https://amphaotogel.vercel.app/" />
+   <meta property="og:url" content="https://amp-bruce633.vercel.app/" />
+   <meta property="og:site_name" content="https://amp-bruce633.vercel.app/" />
    <meta property="og:author" content="Bruce633" />
-   <meta content="https://amphaotogel.vercel.app/" property="og:url" />
+   <meta content="https://amp-bruce633.vercel.app/" property="og:url" />
    <title itemprop="mainEntityOfPage"> Link alternatif login Bruce633 - daftar Bruce633 situs terpercaya </title>
    <link rel="canonical" href="https://128.199.103.114" />
    <link rel="shortcut icon" href="https://i.imgur.com/YF79HBN.png" />
