--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <meta property="og:author" content="Bruce633" />
    <meta content="https://amp-bruce633.vercel.app/" property="og:url" />
    <title itemprop="mainEntityOfPage"> Link alternatif login Bruce633 - daftar Bruce633 situs terpercaya </title>
-   <link rel="canonical" href="https://128.199.103.114" />
+   <link rel="canonical" href="https://bruce633-login.justintvizle4.live" />
    <link rel="shortcut icon" href="https://i.imgur.com/YF79HBN.png" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
